--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="mt-2 frage">Was Hetten <br> Sie Gerne? </p>
                         <div class="col-lg-6 my-3 col-md-6">
                             <div class="card">
-                                <a href="Speisekarte.html"><img src="images/pan.jpg " class="card-img-top" alt="..."></a>
+                                <a href="#scrollspyHeading1"><img src="images/pan.jpg " class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <h5 class="card-title">Süße Pancakes</h5>
                                     <p class="card-text">
