--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                         <li>...</li>
                                     </ul>
                                     </p>
-                                    <a href="S#scrollspyHeading4" class="btn btn-primary">Bestelen Sie Hier</a>
+                                    <a href="#scrollspyHeading4" class="btn btn-primary">Bestelen Sie Hier</a>
                                 </div>
                             </div>
                         </div>
