--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="mt-2 frage">Was Hetten <br> Sie Gerne? </p>
                         <div class="col-lg-6 my-3 col-md-6">
                             <div class="card">
-                                <a href="#scrollspyHeading1"><img src="images/pan.jpg " class="card-img-top" alt="..."></a>
+                                <a href="Speisekarte.html #scrollspyHeading1"><img src="images/pan.jpg " class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <h5 class="card-title">Süße Pancakes</h5>
                                     <p class="card-text">
@@ -57,7 +57,7 @@
                                         
                                     </ul>
                                     </p>
-                                    <a href="#scrollspyHeading1" class="btn btn-primary">Bestelen Sie Hier</a>
+                                    <a href="Speisekarte.html #scrollspyHeading1" class="btn btn-primary">Bestelen Sie Hier</a>
                                 </div>
                             </div>
                         </div>
