--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p class="mt-2 frage">Was Hetten <br> Sie Gerne? </p>
                         <div class="col-lg-6 my-3 col-md-6">
                             <div class="card">
-                                <a href="Speisekarte.html #scrollspyHeading1"><img src="images/pan.jpg " class="card-img-top" alt="..."></a>
+                                <a href="Speisekarte.html"><img src="images/pan.jpg " class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <h5 class="card-title">Süße Pancakes</h5>
                                     <p class="card-text">
@@ -57,13 +57,13 @@
                                         
                                     </ul>
                                     </p>
-                                    <a href="Speisekarte.html #scrollspyHeading1" class="btn btn-primary">Bestelen Sie Hier</a>
+                                    <a href="Speisekarte.html" class="btn btn-primary">Bestelen Sie Hier</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 my-3 col-md-6">
                             <div class="card">
-                                <a href="#scrollspyHeading2"><img src="images/bre.jpg " class="card-img-top" alt="..."></a>
+                                <a href="Speisekarte.html"><img src="images/bre.jpg " class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <h5 class="card-title">Herzhaft Pancakes</h5>
                                     <p class="card-text">
@@ -73,13 +73,13 @@
                                         <li>...</li>
                                     </ul>
                                     </p>
-                                    <a href="#scrollspyHeading2" class="btn btn-primary">Bestelen Sie Hier</a>
+                                    <a href='Speisekarte.html" class="btn btn-primary">Bestelen Sie Hier</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 my-3 col-md-6">
                             <div class="card">
-                                <a href="#scrollspyHeading3"><img src="images/jog.jpg " class="card-img-top" alt="..."></a>
+                                <a href="Speisekarte.html"><img src="images/jog.jpg " class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <h5 class="card-title">Jogurt</h5>
                                     <p class="card-text">
@@ -89,13 +89,13 @@
                                         <li></li>
                                     </ul>
                                     </p>
-                                    <a href="#scrollspyHeading3" class="btn btn-primary">Bestelen Sie Hier</a>
+                                    <a href="Speisekarte.html" class="btn btn-primary">Bestelen Sie Hier</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6 my-3 col-md-6">
                             <div class="card">
-                                <a href="#scrollspyHeading4"><img src="images/kof.jpg " class="card-img-top" alt="..."></a>
+                                <a href="Speisekarte.html"><img src="images/kof.jpg " class="card-img-top" alt="..."></a>
                                 <div class="card-body">
                                     <h5 class="card-title">Kaffee</h5>
                                     <p class="card-text">
@@ -105,7 +105,7 @@
                                         <li>...</li>
                                     </ul>
                                     </p>
-                                    <a href="#scrollspyHeading4" class="btn btn-primary">Bestelen Sie Hier</a>
+                                    <a href="Speisekarte.html" class="btn btn-primary">Bestelen Sie Hier</a>
                                 </div>
                             </div>
                         </div>
