--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </nav>
     </header>
-    <section>
+   <section>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-2">
@@ -73,7 +73,7 @@
                                         <li>...</li>
                                     </ul>
                                     </p>
-                                    <a href='Speisekarte.html" class="btn btn-primary">Bestelen Sie Hier</a>
+                                    <a href="Speisekarte.html" class="btn btn-primary">Bestelen Sie Hier</a>
                                 </div>
                             </div>
                         </div>
