--- a/index.html
+++ b/index.html
@@ -34,6 +34,228 @@
             </div>
         </nav>
     </header>
+    <section>
+        <div class="conteiner-fluid">
+            <div class="row">
+                <div class="col-lg-1">
+
+
+
+                </div>
+
+
+
+
+
+
+
+                <div class="col-lg-10">
+                    <div class="row">
+                        <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
+                            data-bs-smooth-scroll="true" class="scrollspy-example  p-3 rounded-2" tabindex="0" id="fon">
+
+                            <h1 class="my-4" id="scrollspyHeading1">Süße Pancakes</h1>
+                            <p></p>
+
+                            <div class="row">
+                                <div class="col-lg-4 col-md-6 mt-4">
+                                    <div class="card">
+                                        <img src="images/Chi.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">ChisCake</h5>
+                                            <p class="card-text">
+                                            <ul class="lebe">
+                                                <li>Chis</li>
+                                                <li>Waldberesose</li>
+                                            </ul>
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Bestelen</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 mt-4">
+                                    <div class="card">
+                                        <img src="images/nut.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Nutela mit Fruchte</h5>
+                                            <p class="card-text">
+                                            <ul class="lebe">
+                                                <li>Nutela</li>
+                                                <li>Fruchte</li>
+                                            </ul>
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Bestelen</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 mt-4">
+                                    <div class="card">
+                                        <img src="images/bla.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-titl">Blauberi mit Aronsirop</h5>
+                                            <p class="card-text">
+                                            <ul class="lebe">
+                                                <li>Blauberi</li>
+                                                <li>Aronsirop</li>
+                                            </ul>
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Bestelen</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 mt-4">
+                                    <div class="card">
+                                        <img src="images/jogurt.jpg" class="card-img-top" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-titl">Jogurtcake</h5>
+                                            <p class="card-text">
+                                            <ul class="lebe">
+                                                <li>Jogurt</li>
+                                                <li>Honig</li>
+                                                <li>Fruchte</li>
+                                            </ul>
+                                            </p>
+                                            <a href="#" class="btn btn-primary">Bestelen</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+                        <h1 class="my-4" id="scrollspyHeading2">Herzhaft Pancakes</h1>
+                        <p></p>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card ccc">
+                                <img src="images/brecc.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-titl">Breakfest-Pancake</h5>
+                                    <p class="card-text">
+                                    <ul class="lebe">
+                                        <li>Eier</li>
+                                        <li>Wurstchen</li>
+                                        <li>Zwibel</li>
+                                        <li>...</li>
+                                    </ul>
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Bestelen</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card ccc">
+                                <img src="images/kar.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-titl">Kari-Wurst-Pancake</h5>
+                                    <p class="card-text">
+                                    <ul class="lebe">
+                                        <li>Wurstchen</li>
+                                        <li>Karisose</li>
+                                        <li>Kari</li>
+                                        <li>...</li>
+                                    </ul>
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Bestelen</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card ccc">
+                                <img src="images/ram.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-titl">Ramcake</h5>
+                                    <p class="card-text">
+                                    <ul class="lebe">
+                                        <li>Eier</li>
+                                        <li>Zwibel</li>
+                                        <li>Sanne</li>
+                                        <li>Ramsose</li>
+                                    </ul>
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Bestelen</a>
+                                </div>
+                            </div>
+                        </div>
+                        <h1 class="my-4" id="scrollspyHeading3">Jogurt</h1>
+                        <p></p>
+                        <div class="col-lg-4 col-md-6 mt-4">
+                            <div class="card">
+                                <img src="images/einfah jog.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-titl">Jogurt</h5>
+                                    <p class="card-text">
+                                    <ul class="lebe">
+                                        <li>Hafaafloka</li>
+                                        <li>Jogurt</li>
+                                        <li>Honig</li>
+                                        <li>Waldberesose</li>
+                                    </ul>
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Bestelen</a>
+                                </div>
+                            </div>
+                        </div>
+                        <h1 class="my-4" id="scrollspyHeading4">Kaffee</h1>
+                        <p></p>
+                        <div class="col-lg-4 col-md-6 mt-4 mb-4">
+                            <div class="card">
+                                <img src="images/exp.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-titl">Expresso</h5>
+                                    <p class="card-text">
+                                    <ul class="lebe">
+                                        <li>Sie Konen noch Milh welen</li>
+
+                                    </ul>
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Bestelen</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4 mb-4">
+                            <div class="card">
+                                <img src="images/cap.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-titl">Capochino</h5>
+                                    <p class="card-text">
+                                    <ul class="lebe">
+                                        <li>Sie Konen noch Milh welen</li>
+
+                                    </ul>
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Bestelen</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 mt-4 mb-4">
+                            <div class="card">
+                                <img src="images/cofi-crem .jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-titl">Kaffee-Crema</h5>
+                                    <p class="card-text">
+                                    <ul class="lebe">
+                                        <li>Sie Konen noch Milh welen</li>
+
+                                    </ul>
+                                    </p>
+                                    <a href="#" class="btn btn-primary">Bestelen</a>
+                                </div>
+                            </div>
+                        </div>
+                        
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-1">
+
+            </div>
+        </div>
+        </div>
+
+    </section>
   
     <footer>
 
